--- a/src/vue-vif/index.html
+++ b/src/vue-vif/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body>
-    <div id="app">
+  <body class="m-3">
+    <div id="app"></div>
     <script type="module" src="main.ts"></script>
   </body>
 </html>
